<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button_text">Login</string>
    <string name="login_email_hint_text">Email adress</string>
    <string name="login_pwd_hint_text">Password</string>
    <string name="wellcome_title_text">Hi !</string>
    <string name="wellcome_message_text">Wellcome to our Shoe app</string>
    <string name="instruction_title_text">Instruction Are Simple</string>
    <string name="instruction_message_text"> When you go to next screen you will can navigate your saved shoes
        and You can press plus button to add new shoe details.\n Enjoy !!</string>
    <string name="floating_action_button_description">Add a new shoe details</string>
    <string name="logout_menu_text">Logout</string>
    <string name="shoe_name_text_hint_id">Name</string>
    <string name="shoe_size_text_hint_id">Size</string>
    <string name="shoe_company_text_hint_id">Company</string>
    <string name="shoe_description_text_hint_id">Description</string>
    <string name="continue_button">Continue</string>
    <string name="shoe_details_button_cancel">Cancel</string>
    <string name="shoe_detail_save_botton">Save</string>
</resources>
