<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
    Linear Layout help to organize my view in single vertical direction with light behavior and
    easy code and it's not complex UI
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/instruction_title_text_id"
            style="@style/contentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_dimention"
            android:layout_marginEnd="@dimen/small_margin_dimention"
            android:layout_marginBottom="@dimen/large_margin_dimention"
            android:drawablePadding="5dp"
            android:ems="10"
            android:text="@string/instruction_title_text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/instruction_message_text_id"
            style="@style/contentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_dimention"
            android:layout_marginEnd="@dimen/small_margin_dimention"
            android:ems="10"
            android:text="@string/instruction_message_text" />


        <Button
            android:id="@+id/instruction_button_id"
            style="@style/buttonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_dimention"
            android:layout_marginTop="@dimen/large_margin_dimention"
            android:layout_marginEnd="@dimen/small_margin_dimention"
            android:background="@color/colorPrimaryDark"
            android:text="@string/continue_button" />

    </LinearLayout>
</layout>