<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
    Linear Layout help to organize my view in single vertical direction with light behavior and
    easy code and it's not complex UI
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_dimention"
            android:layout_marginEnd="@dimen/small_margin_dimention"
            android:layout_marginBottom="@dimen/small_margin_dimention"
            android:drawableStart="@android:drawable/ic_dialog_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/login_email_hint_text"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/login_pwd_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_dimention"
            android:layout_marginEnd="@dimen/small_margin_dimention"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/login_pwd_hint_text"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/login_button_id"
            style="@style/buttonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_dimention"
            android:layout_marginTop="@dimen/small_margin_dimention"
            android:layout_marginEnd="@dimen/small_margin_dimention"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/login_button_text"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>